[gd_scene load_steps=2 format=3 uid="uid://duw2so33mqwt6"]

[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Commands/SignalControl.gd" id="1_wmucy"]

[node name="SignalVBoxContainer" type="VBoxContainer" node_paths=PackedStringArray("req_node", "signal_name", "signal_args")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wmucy")
req_node = NodePath("NodeHBoxContainer/NodeLineEdit")
signal_name = NodePath("SignalHBoxContainer/SignalLineEdit")
signal_args = NodePath("ArgsHBoxContainer/ArgsLineEdit")

[node name="NodeHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="NodeHBoxContainer"]
layout_mode = 2
text = "Node:"

[node name="NodeLineEdit" type="LineEdit" parent="NodeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SignalHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SignalHBoxContainer"]
layout_mode = 2
text = "Signal Name:"

[node name="SignalLineEdit" type="LineEdit" parent="SignalHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArgsHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ArgsHBoxContainer"]
layout_mode = 2
text = "Arguments:"

[node name="ArgsLineEdit" type="LineEdit" parent="ArgsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="NodeHBoxContainer/NodeLineEdit" to="." method="_on_node_line_edit_text_changed"]
[connection signal="text_changed" from="SignalHBoxContainer/SignalLineEdit" to="." method="_on_signal_line_edit_text_changed"]
[connection signal="text_changed" from="ArgsHBoxContainer/ArgsLineEdit" to="." method="_on_args_line_edit_text_changed"]
